document how to run the MapApp