@@ -5,3 +5,14 @@ A Minecraft-style world generator.
 ## Ideas
 
 * place random paths that lead through the map, building bridges across rivers, tunnels through mountains, etc
+
+## Map App
+
+A Simplex noise visualizer.
+
+It needs to be run with the following JVM options, assuming you're running it on Windows:
+
+```shell
+--module-path "C:\Users\<your-username>\.m2\repository\org\openjfx\javafx-base\19\javafx-base-19-win.jar";"C:\Users\<your-username>\.m2\repository\org\openjfx\javafx-controls\19\javafx-controls-19-win.jar";"C:\Users\<your-username>\.m2\repository\org\openjfx\javafx-graphics\19\javafx-graphics-19-win.jar"
+--add-modules=javafx.base,javafx.controls,javafx.graphics
+```
